* New simplified party balance with colors and icons

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Allow to filter third party balance per account
* Pad fiscal years sequences

Version 1.2 - 2014-07-01
* Changelog file creation