@@ -1,3 +1,4 @@
+* Restrict default fee permissions to read only
 * New simplified party balance with colors and icons
 
 Version 1.4 - 2015-05-29
